--- a/src/main/resources/templates/login-funcionario.html
+++ b/src/main/resources/templates/login-funcionario.html
@@ -205,7 +205,7 @@
 <div class="login-container">
     <div class="login-header">
         <img th:src="@{/images/logo.png}" alt="Logo" class="login-logo">
-        <h1>Login</h1>
+        <h1>Iniciar Sessão</h1>
         <p class="subtitle">Acesse o painel administrativo</p>
     </div>
 
