--- a/src/main/resources/templates/cliente-projetos.html
+++ b/src/main/resources/templates/cliente-projetos.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Gestão de Clientes</title>
+    <title>Projetos do Cliente</title>
     <style>
         body {
             margin: 0;
@@ -103,10 +103,10 @@
 <body>
 
 <div id="sidebar" class="sidebar">
-    <a th:href="@{/funcionario2/home}">Início</a>
-    <a th:href="@{/funcionario2/stock}">Stock</a>
-    <a th:href="@{/funcionario2/cliente}">Cliente</a>
-    <a th:href="@{/funcionario/logout}" style="color: red;">Terminar sessão</a>
+    <a th:href="@{/cliente/home}">Início</a>
+    <a th:href="@{/cliente/perfil}">Perfil</a>
+    <a th:href="@{/cliente/projetos}">Projetos</a>
+    <a th:href="@{/cliente/logout}" style="color: red;">Terminar sessão</a>
 </div>
 
 <div class="topbar">
@@ -115,29 +115,23 @@
 </div>
 
 <div id="content" class="content">
-    <h1>Gestão de Clientes</h1>
+    <h1>Projetos do Cliente</h1>
 
     <div class="button-container">
-        <form th:action="@{/funcionario2/cliente/listar-projetos}" method="get">
+        <form th:action="@{/cliente/projetos/novo}" method="get">
+            <button type="submit">Adicionar Projeto</button>
+        </form>
+        <form th:action="@{/cliente/projetos/remover}" method="get">
+            <button type="submit">Remover Projeto</button>
+        </form>
+        <form th:action="@{/cliente/projetos/editar}" method="get">
+            <button type="submit">Editar Projeto</button>
+        </form>
+        <form th:action="@{/cliente/projetos/listar}" method="get">
             <button type="submit">Listar Projetos</button>
         </form>
-        <form th:action="@{/funcionario2/cliente/adicionar-servico}" method="get">
-            <button type="submit">Adicionar Serviço</button>
-        </form>
-        <form th:action="@{/funcionario2/cliente/remover-servico}" method="get">
-            <button type="submit">Remover Serviço</button>
-        </form>
-        <form th:action="@{/funcionario2/cliente/editar-servico}" method="get">
-            <button type="submit">Editar Serviço</button>
-        </form>
-        <form th:action="@{/funcionario2/cliente/listar-servicos}" method="get">
-            <button type="submit">Listar Serviços</button>
-        </form>
-        <form th:action="@{/funcionario2/cliente/registar-pagamento-cliente}" method="get">
-            <button type="submit">Registar Pagamento</button>
-        </form>
-        <form th:action="@{/funcionario2/cliente/listar-pagamentos-clientes}" method="get">
-            <button type="submit">Listar Pagamentos</button>
+        <form th:action="@{/cliente/projetos/estado}" method="get">
+            <button type="submit">Estado do Projeto</button>
         </form>
     </div>
 </div>
